k8s/02-configmap/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: backend
  name: backend
spec:
  ports:
  - name: 80-tcp
    port: 80
    protocol: TCP
    targetPort: 4000
  selector:
    app: backend
  sessionAffinity: None
  type: ClusterIP
