k8s/02-configmap/backend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: backend
  name: backend
spec:
  port:
    targetPort: 80-tcp
  to:
    kind: Service
    name: backend
